Bruk openapi tags for å gruppere apier
